--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -6,10 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
     <link rel="stylesheet" href="style.css"> 
+
+    <style>
+      p {
+    color: white;
+    background-color: green;
+    }
+    </style>
+
   </head>
   <body>
     <h1>Style me via the external method!</h1>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="color: black; background-color: orange;">Inline Method</button>
   </body>
 </html>
