--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="btn" id="btn1">Click Me!</button>
-    <button class="btn" id="btn2">No, Click Me!</button>
+    <button class="btn1">Click Me!</button>
+    <button class="btn2">No, Click Me!</button>
   </body>
 </html>
